Update dependencies (except zio-http)