@@ -1,17 +1,12 @@
-val http4sVersion = "0.23.23"
+val http4sVersion = "0.23.24"
 val blazeVersion = "0.23.15"
-val tapirVersion = "1.6.3"
-
-//val catsEffectVersion = "3.5.1"
-val catsEffectVersion = "3.6-e9aeb8c"
-
-//val fs2Version = "3.7.0"
-val fs2Version = "3.8-1af22dd"
-
+val tapirVersion = "1.9.4"
+val catsEffectVersion = "3.5.2"
+val fs2Version = "3.9.3"
 val zioHttpVersion = "3.0.0-RC2"
-val zioVersion = "2.0.15"
+val zioVersion = "2.0.19"
 val gatlingVersion = "3.9.5"
-val logbackVersion = "1.4.8"
+val logbackVersion = "1.4.14"
 
 // compiler options explicitly disabled from https://github.com/DavidGregory084/sbt-tpolecat
 val disabledScalacOptionsCompile = Set(
@@ -23,9 +18,9 @@ lazy val commonSettings = Def.settings(
   name := "web-servers-benchmark",
   version := "0.1.0-SNAPSHOT",
   fork := true,
-  scalaVersion := "2.13.11",
-  scalacOptions ++= Seq("-release", "17"),
-  javacOptions ++= Seq("-source", "17", "-target", "17"),
+  scalaVersion := "2.13.12",
+  scalacOptions ++= Seq("-release", "21"),
+  javacOptions ++= Seq("-source", "21", "-target", "21"),
   Compile / scalacOptions ~= ((options: Seq[String]) => options.filterNot(disabledScalacOptionsCompile)),
   Compile / scalacOptions ++= Seq(
     "-Wconf:any:warning-verbose", // print warnings with their category, site, and (for deprecations) origin and since-version
@@ -50,6 +45,7 @@ lazy val commonSettings = Def.settings(
     "-Xmx32g",
     "-XX:+AlwaysPreTouch",
     "-XX:+UseZGC",
+    "-XX:+ZGenerational"
   ),
 )
 
@@ -93,6 +89,7 @@ lazy val server = (project in file("server"))
       "-J-Xmx32g",
       "-J-XX:+AlwaysPreTouch",
       "-J-XX:+UseZGC",
+      "-J-XX:+ZGenerational"
     )
   )
 
@@ -118,6 +115,7 @@ lazy val client = (project in file("client"))
       "-Xmx32g",
       "-XX:+AlwaysPreTouch",
       "-XX:+UseZGC",
+      "-XX:+ZGenerational"
     ),
   )
 
